# optimism-toolkit

./: LICENSE  README.md  requirements.txt  setup.cfg
examples/: guess_the_number.py
examples/cookie_optimizer/: cookie_optimizer.py
optimism_toolkit/examples/: guess_the_number.py
optimism_toolkit/heuristics/: Heuristic_Library.py  Heuristic_Map.py  Objective_Function.py  heuristic_functions.py  heuristic_registration.py
optimism_toolkit/heuristics/objectives/: objective_decorators.py
optimism_toolkit/optimizer/: Design_Iteration.py  Design_Population.py  Optimizer.py  population_history_graph.py
optimism_toolkit/optimizer/population_tracking/: population_history_graph.py
optimism_toolkit/selector_functions/: selector_functions.py
optimism_toolkit/selector_functions/design_selectors/: design_selectors.py  design_sorting_functions.py
optimism_toolkit/selector_functions/modifier_selectors/: modifier_selectors.py  modifier_sorting_functions.py
optimism_toolkit/stopping_criteria/: stopping_criteria.py
