[metadata]
name = optimism-toolkit
version = 0.1.0
author = Megan Hofmann
author_email = m.hofmann@northeastern.edu
url = https://github.com/mhofmann-Khoury/optimism-toolkit
description = OPTIMISM is the Optimization Programing Toolkit Integrating Metaheuristic Intuitive Search Methods
long_description = file: README.md
long_description_content_type = text/markdown
description_file=README.md
license = MIT
license_files=LICENSE.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.11
    Natural Language :: English

[options]
;install_requires =
zip_safe = True


[options.package_data]
* = README.md,  LICENSE.rst, requirements.txt

[options.packages.find]
exclude = tests*, examples*